weaken scope